loopdowhile.Poucet1.scala.code

do{

  for(i <- 0 to 4){
    forward()
    var baggles : Int = 0
    if(isOverBaggle())
     baggles=baggles+1
  }
  
  if(baggles>=3)
  	left()
  else
   right()
  
  
  
}while(!exitReached())